商品管理模块
2017年7月23日 包含上传文件到ftp

--- a/mmall/pom.xml
+++ b/mmall/pom.xml
@@ -180,7 +180,7 @@
 
 
 
-    <!-- mybatis pager -->
+    <!-- mybatis pager 分页插件-->
 
     <dependency>
       <groupId>com.github.pagehelper</groupId>
